[package]
name = "lt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
graphql_client = {version = "0.14.0", features = ["reqwest-blocking"] }
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version = "1.44.2", features = ["rt-multi-thread"]}
