[package]
name = "lt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
cli-clipboard = "0.4.0"
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
eyre = "0.6.12"
futures-util = "0.3.31"
graphql_client = {version = "0.14.0", features = [ "reqwest", "reqwest-rustls"] }
open = "5.3.2"
ratatui = "0.29.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tui-markdown = { version = "0.3.5", features = ["highlight-code"] }
