[package]
name = "lt"
version = "0.0.4"
edition = "2024"
description = "A TUI application to view & interact with Linear.app issues"
authors = ["Mark Di Marco <mark.dimarco@gmail.com>"]
keywords = ["linear", "tui", "issues"]
categories = ["command-line-utilities"]
homepage = "https://github.com/markmarkoh/lt"
repository = "https://github.com/markmarkoh/lt"
license = "MIT"

[dependencies]
chrono = "0.4.41"
cli-clipboard = "0.4.0"
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
graphql_client = {version = "0.14.0", features = [ "reqwest", "reqwest-rustls"] }
open = "5.3.2"
ratatui = "0.29.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0.219", features = ["derive"]}
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tui-markdown = { version = "0.3.5", features = ["highlight-code"] }

[dev-dependencies]
insta = "1.43.1"
